# docs/swagger.json
@@ -32,18 +32,13 @@
                 "summary": "Вход пользователя в аккаунт, используя email и пароль",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "email",
-                        "name": "email",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "password",
-                        "name": "password",
-                        "in": "query",
-                        "required": true
+                        "description": "user credentials",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handlers.signinRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -1391,6 +1386,17 @@
                     "type": "integer"
                 },
                 "surname": {
+                    "type": "string"
+                }
+            }
+        },
+        "handlers.signinRequest": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
                     "type": "string"
                 }
             }
